working colab notebook

--- a/docs/2024-08-14_notes-01.md
+++ b/docs/2024-08-14_notes-01.md
@@ -1,3 +1,5 @@
+# Scrappy notes 2024-08-14
+
 ## Plan
 
 _you can make a silk purse out of a sow's ear if you have a model that has spent it's whole life comparing them_
